Update and rename _.env.sh to .env

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 AUTO_LOOP=true
 LOOP_INTERVAL=1800000
 MAX_SESSIONS=5
-DEFAULT_TARGET_URL=https://github.com
+DEFAULT_TARGET_URL=https://cryptoajah.blogspot.com
 DEFAULT_PROXIES=
 
 # Security & Proxy Enforcement
