--- a/.env
+++ b/.env
@@ -17,3 +17,8 @@ ENABLE_HELMET=true
 ENABLE_CORS=true
 FORCE_PROXY=true
 NO_DIRECT_CONNECTION=true
+
+# Web Proxy Settings
+WEB_PROXY_TIMEOUT=30000
+WEB_PROXY_RETRY_COUNT=2
+ENABLE_WEB_PROXY_FORM_FILL=true
